# src/types/ms.types.ts
@@ -50,7 +50,9 @@ export type InitOptions = {
 export interface IMSDashboard {
   getConfigDetailed(): { expiration: string }
 
-  getMainHistoryFull(): Promise<MSTrackableRequestContent[][]>
+  getMainHistoryFull(
+    options?: GetMainHistoryFullOptions,
+  ): Promise<MSTrackableRequestContent[][]>
   getMainHistoryShort(): Promise<MSTrackableRequestContentShort[][]>
   getResponseStream(requestId: string): Promise<Readable>
   removeHistory(): Promise<void>
@@ -62,6 +64,10 @@ export interface IMSDashboard {
   dropMock(id: string): Promise<void>
 
   reset(): Promise<void>
+}
+
+export type GetMainHistoryFullOptions = {
+  sizeLimit?: number
 }
 
 export interface IMSRepo<TClient = MSRedis> {
